--- a/xiniStudent/src/main/res/drawable/page_outline_round.xml
+++ b/xiniStudent/src/main/res/drawable/page_outline_round.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <stroke android:color="@color/black" android:width="1dp"/>
+            <stroke android:color="@color/lightGray" android:width="1dp"/>
             <corners android:radius="5dp"/>
             <solid android:color="@color/white"/>
         </shape>
