--- a/xiniStudent/src/main/res/layout/card_view.xml
+++ b/xiniStudent/src/main/res/layout/card_view.xml
@@ -102,6 +102,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:anim_scale_factor="1"
+                app:is_enabled="false"
                 app:icon_size="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
