--- a/xinihostel/src/main/res/layout/activity_student_details.xml
+++ b/xinihostel/src/main/res/layout/activity_student_details.xml
@@ -8,50 +8,67 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
         app:layout_constraintBottom_toTopOf="@id/pgDetailsButtonLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            >
 
-            <include
-                android:id="@+id/include1"
-                layout="@layout/layout_pg_pictures"
+            <ImageView
+                android:id="@+id/studentDetailImage"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_default="percent"
+                app:layout_constraintHeight_percent="0.4"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_default="percent"
+                android:padding="15dp"/>
+            <TextView
+                android:id="@+id/studentDetailDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp" />
+                android:minLines="11"
+                android:textSize="20dp"
+                app:layout_constraintTop_toBottomOf="@id/studentDetailImage"
+                app:layout_constraintLeft_toLeftOf="parent"/>
 
-            <include
-                android:id="@+id/include2"
-                layout="@layout/layout_pg_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp" />
+            <ImageView
+                android:id="@+id/studentAadharCard"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHeight_default="percent"
+                app:layout_constraintHeight_percent="0.2"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/studentDetailDescription"
+                app:layout_constraintVertical_bias="0.155"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.4"
+                android:layout_marginLeft="15dp"/>
 
-            <include
-                android:id="@+id/include3"
-                layout="@layout/layout_pg_reviews"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp" />
-
-            <include
-                android:id="@+id/include4"
-                layout="@layout/layout_pg_location"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp" />
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/studentInstituteCard"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_default="percent"
+                app:layout_constraintHeight_percent="0.2"
+                app:layout_constraintLeft_toRightOf="@id/studentAadharCard"
+                app:layout_constraintTop_toBottomOf="@id/studentDetailDescription"
+                app:layout_constraintVertical_bias="0.155"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.4"
+                android:layout_marginRight="15dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/pgDetailsButtonLayout"
         android:layout_width="match_parent"
