--- a/xinihostel/src/main/res/layout/imageviewer.xml
+++ b/xinihostel/src/main/res/layout/imageviewer.xml
@@ -23,4 +23,20 @@
         app:layout_constraintWidth_percent="0.05"
         android:layout_marginRight="15dp"
         android:layout_marginTop="15dp"/>
+
+    <ImageView
+        android:id="@+id/deleteImageViewer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@null"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.06"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.05"
+        android:layout_marginBottom="15dp"
+        android:src="@drawable/cross_white"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
