--- a/xiniStudent/src/main/res/layout/activity_chat_all.xml
+++ b/xiniStudent/src/main/res/layout/activity_chat_all.xml
@@ -28,8 +28,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.06"
+        app:layout_constraintWidth_percent="0.08"
         android:layout_marginEnd="16dp"
         android:src="@drawable/search"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
