--- a/xinihostel/src/main/res/layout/homepage_adbanner.xml
+++ b/xinihostel/src/main/res/layout/homepage_adbanner.xml
@@ -5,5 +5,6 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/homePageAdBanner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:padding="20dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
