--- a/xiniStudent/src/main/res/layout/profile.xml
+++ b/xiniStudent/src/main/res/layout/profile.xml
@@ -19,7 +19,6 @@
         android:id="@+id/imageView5"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/text_gradient"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
@@ -210,7 +209,7 @@
             app:layout_constraintWidth_percent=".6" />
 
         <TextView
-            android:id="@+id/textView18"
+            android:id="@+id/activityChatCard_name"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
@@ -239,7 +238,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_default="percent"
             app:layout_constraintHeight_percent=".09"
-            app:layout_constraintStart_toEndOf="@+id/textView18"
+            app:layout_constraintStart_toEndOf="@+id/activityChatCard_name"
             app:layout_constraintTop_toBottomOf="@+id/textView23"
             app:layout_constraintWidth_default="percent"
             app:layout_constraintWidth_percent=".7"
@@ -260,7 +259,7 @@
             app:layout_constraintHeight_percent=".09"
             app:layout_constraintHorizontal_bias="0.12"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView18"
+            app:layout_constraintTop_toBottomOf="@+id/activityChatCard_name"
             app:layout_constraintWidth_default="percent"
             app:layout_constraintWidth_percent=".3" />
 
@@ -279,7 +278,7 @@
             app:layout_constraintHeight_percent=".09"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/textView4"
-            app:layout_constraintTop_toBottomOf="@+id/textView18"
+            app:layout_constraintTop_toBottomOf="@+id/activityChatCard_name"
             app:layout_constraintWidth_default="percent"
             app:layout_constraintWidth_percent=".8"
             />
@@ -493,7 +492,7 @@
             app:layout_constraintWidth_percent=".1" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/activityChatPersonal_name"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
@@ -524,7 +523,7 @@
             app:layout_constraintHeight_percent=".09"
             app:layout_constraintHorizontal_bias="0.12"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView10"
+            app:layout_constraintTop_toBottomOf="@+id/activityChatPersonal_name"
             app:layout_constraintWidth_default="percent"
             app:layout_constraintWidth_percent=".3" />
 
@@ -541,7 +540,7 @@
             app:layout_constraintHeight_default="percent"
             app:layout_constraintHeight_percent=".09"
             app:layout_constraintStart_toEndOf="@+id/textView11"
-            app:layout_constraintTop_toBottomOf="@+id/textView10"
+            app:layout_constraintTop_toBottomOf="@+id/activityChatPersonal_name"
             app:layout_constraintWidth_default="percent"
             app:layout_constraintWidth_percent=".7"
             app:layout_constraintHorizontal_bias=".001"
