--- a/xinihostel/src/main/res/layout/activity_student_details.xml
+++ b/xinihostel/src/main/res/layout/activity_student_details.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
@@ -29,13 +29,14 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_default="percent"
-                android:padding="15dp"/>
+                android:padding="15dp"
+                android:contentDescription="TODO" />
             <TextView
                 android:id="@+id/studentDetailDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minLines="11"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintTop_toBottomOf="@id/studentDetailImage"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -51,12 +52,12 @@
                 app:layout_constraintVertical_bias="0.155"
                 app:layout_constraintWidth_default="percent"
                 app:layout_constraintWidth_percent="0.4"
-                android:layout_marginLeft="15dp"/>
+                android:layout_marginStart="15dp"/>
 
             <ImageView
                 android:id="@+id/studentInstituteCard"
-                android:layout_width="162dp"
-                android:layout_height="139dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_marginRight="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -99,7 +100,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent=".49" />
+            app:layout_constraintWidth_percent=".29" />
 
         <Button
             android:id="@+id/book_button"
@@ -116,23 +117,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent=".49" />
-
+            app:layout_constraintWidth_percent=".29" />
+        <Button
+            android:id="@+id/cancel_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_marginTop="15dp"
+            android:layout_weight="1"
+            android:background="@color/black"
+            android:elevation="3dp"
+            android:text="CANCEL REQUEST"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp"
+            app:layout_constraintLeft_toRightOf="@id/wishlist_button"
+            app:layout_constraintRight_toLeftOf="@id/book_button"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent=".29"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <Button
-        android:id="@+id/cancel_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_marginTop="15dp"
-        android:layout_weight="1"
-        android:background="@color/red"
-        android:elevation="3dp"
-        android:text="cancel"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent=".19"
-        android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
