--- a/xinihostel/src/main/res/layout/activity_splash_screen.xml
+++ b/xinihostel/src/main/res/layout/activity_splash_screen.xml
@@ -13,15 +13,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.2"
+        app:layout_constraintHeight_percent="0.3"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.454"
+        app:layout_constraintVertical_bias="0.394"
         app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.7"
+        app:layout_constraintWidth_percent="0.9"
         app:lottie_autoPlay="true"
-        app:lottie_rawRes="@raw/splash_animation" />
+        app:lottie_rawRes="@raw/splash_animation"
+        android:elevation="2dp"/>
 
     <ImageView
         android:layout_width="0dp"
@@ -31,11 +32,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.13"
+        app:layout_constraintHeight_percent="0.23"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.617"
+        app:layout_constraintVertical_bias="0.59"
         app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.4" />
+        app:layout_constraintWidth_percent="0.6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
