--- a/xiniStudent/src/main/res/layout/activity_chat_personal.xml
+++ b/xiniStudent/src/main/res/layout/activity_chat_personal.xml
@@ -91,6 +91,8 @@
         android:layout_marginTop="6dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_chat_send"
+        android:clickable="true"
+        android:onClick="sendMessage"
         app:layout_constraintBottom_toBottomOf="@id/activityChatPersonal_editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_editText"
