--- a/xiniStudent/src/main/res/layout/layout_pg_pictures.xml
+++ b/xiniStudent/src/main/res/layout/layout_pg_pictures.xml
@@ -95,6 +95,19 @@
         app:layout_constraintStart_toStartOf="@+id/layoutPgPictures_Rent"
         app:layout_constraintTop_toBottomOf="@+id/layoutPgPictures_Rent" />
 
+    <Button
+        android:id="@+id/layoutPgPictures_startchat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start Chat"
+        android:background="@color/black"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintTop_toBottomOf="@id/layoutPgPictures_RatingBar"
+        app:layout_constraintBottom_toTopOf="@id/editTextTextPersonName3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"/>
+
     <TextView
         android:id="@+id/editTextTextPersonName3"
         android:layout_width="wrap_content"
@@ -107,7 +120,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layoutPgPictures_RatingBar" />
+        app:layout_constraintTop_toBottomOf="@+id/layoutPgPictures_startchat" />
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
