--- a/xiniStudent/src/main/res/drawable/sent_message.xml
+++ b/xiniStudent/src/main/res/drawable/sent_message.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<shape android:shape="rectangle"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/AccentLight"/>
     <corners android:radius="30dp" />
 </shape>
