--- a/xiniStudent/src/main/res/layout/activity_chat_personal.xml
+++ b/xiniStudent/src/main/res/layout/activity_chat_personal.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/activityChatPersonal_constraintLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activityChatPersonal_constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChatPersonal">
@@ -32,9 +31,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        app:layout_constraintHorizontal_bias="0.1"
         android:hint="Name"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/activityChatPersonal_chatToolbar"
+        app:layout_constraintEnd_toStartOf="@+id/imageView10"
         app:layout_constraintStart_toEndOf="@+id/activityChatPersonal_profilePicture"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -72,8 +73,6 @@
         android:id="@+id/activityChatPersonal_editText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:background="@drawable/edit_text_box"
         android:drawablePadding="10dp"
         android:hint="Type a message"
@@ -81,8 +80,8 @@
         android:textColorHint="@color/secondary"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activityChatPersonal_recyclerView"
-        tools:layout_editor_absoluteX="58dp" />
+        app:layout_constraintEnd_toStartOf="@+id/activityChatPersonal_send"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/activityChatPersonal_send"
@@ -90,9 +89,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_chat_send"
         android:clickable="true"
         android:onClick="sendMessage"
+        android:src="@drawable/ic_chat_send"
         app:layout_constraintBottom_toBottomOf="@id/activityChatPersonal_editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_editText"
@@ -100,9 +99,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/activityChatPersonal_recyclerView"
-        android:layout_width="409dp"
-        android:layout_height="614dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/activityChatPersonal_editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activityChatPersonal_chatToolbar" />
