--- a/xiniStudent/src/main/res/layout/text_view.xml
+++ b/xiniStudent/src/main/res/layout/text_view.xml
@@ -1,25 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/textView_LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="right"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/textMessageSend"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:background="@drawable/received_message"
-        android:paddingLeft="15dp"
-        android:textColor="@color/white" />
-    <TextView
-        android:id="@+id/textMessageRecieve"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:background="@drawable/received_message"
-        android:paddingLeft="15dp"
-        android:textColor="@color/white" />
-</LinearLayout>
+    android:orientation="vertical"
+    tools:ignore="RtlHardcoded"/>
