--- a/xinihostel/src/main/res/layout/activity_chat_all.xml
+++ b/xinihostel/src/main/res/layout/activity_chat_all.xml
@@ -54,11 +54,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/activityChatAll_recyclerView"
-        android:layout_width="388dp"
-        android:layout_height="646dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
