--- a/xinihostel/src/main/res/layout/activity_chat_personal.xml
+++ b/xinihostel/src/main/res/layout/activity_chat_personal.xml
@@ -14,8 +14,9 @@
         android:layout_height="60dp"
         android:background="@color/colorPrimary"
         android:backgroundTint="@color/colorPrimary"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/activityChatPersonal_profilePicture"
@@ -31,10 +32,11 @@
         android:id="@+id/activityChatPersonal_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        app:layout_constraintHorizontal_bias="0.1"
         android:hint="Name"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/activityChatPersonal_chatToolbar"
+        app:layout_constraintEnd_toStartOf="@+id/imageView10"
         app:layout_constraintStart_toEndOf="@+id/activityChatPersonal_profilePicture"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -72,7 +74,6 @@
         android:id="@+id/activityChatPersonal_editText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/edit_text_box"
         android:drawablePadding="10dp"
@@ -81,8 +82,8 @@
         android:textColorHint="@color/secondary"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activityChatPersonal_recyclerView"
-        tools:layout_editor_absoluteX="58dp" />
+        app:layout_constraintEnd_toStartOf="@+id/activityChatPersonal_send"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/activityChatPersonal_send"
@@ -100,9 +101,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/activityChatPersonal_recyclerView"
-        android:layout_width="409dp"
-        android:layout_height="614dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/activityChatPersonal_editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activityChatPersonal_chatToolbar" />
