--- a/xinihostel/src/main/res/layout/text_view.xml
+++ b/xinihostel/src/main/res/layout/text_view.xml
@@ -1,25 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/sendMessageLinearLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="right"
-    android:orientation="vertical">
+    android:orientation="vertical"/>
 
-    <TextView
-        android:id="@+id/textMessageSend"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:background="@drawable/received_message"
-        android:paddingLeft="15dp"
-        android:textColor="@color/white" />
-    <TextView
-        android:id="@+id/textMessageRecieve"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:background="@drawable/received_message"
-        android:paddingLeft="15dp"
-        android:textColor="@color/white" />
-</LinearLayout>
